--- a/config.toml
+++ b/config.toml
@@ -33,3 +33,17 @@ caching = true
 # If false, makes your Streamlit script not draw to a Streamlit app.
 # Default: true
 displayEnabled = true
+
+[runner]
+
+# Allows you to type a variable or string by itself in a single line of Python code to write it to the app.
+# Default: true
+magicEnabled = true
+
+# Install a Python tracer to allow you to stop or pause your script at any point and introspect it. As a side-effect, this slows down your script's execution.
+# Default: false
+installTracer = false
+
+# Sets the MPLBACKEND environment variable to Agg inside Streamlit to prevent Python crashing.
+# Default: true
+fixMatplotlib = true
