--- a/config.toml
+++ b/config.toml
@@ -54,3 +54,25 @@ fixMatplotlib = true
 # Example: ['/home/user1/env', 'relative/path/to/folder']
 # Default: []
 folderWatchBlacklist = ['']
+
+
+
+# If false, will attempt to open a browser window on start.
+# Default: false unless (1) we are on a Linux box where DISPLAY is unset, or (2) server.liveSave is set.
+headless = true
+
+# Immediately share the app in such a way that enables live monitoring, and post-run analysis.
+# Default: false
+liveSave = false
+
+# Automatically rerun script when the file is modified on disk.
+# Default: false
+runOnSave = false
+
+# The port where the server will listen for client and browser connections.
+# Default: 8501
+port = 80
+
+# Enables support for Cross-Origin Request Sharing, for added security.
+# Default: true
+enableCORS = false
