--- a/config.toml
+++ b/config.toml
@@ -76,3 +76,11 @@ port = 80
 # Enables support for Cross-Origin Request Sharing, for added security.
 # Default: true
 enableCORS = false
+
+
+[browser]
+
+# Internet address of the server server that the browser should connect to. Can be IP address or DNS name.
+# Default: 'localhost'
+serverAddress = "0.0.0.0"
+
