Config Browser serverPort = 80

--- a/config.toml
+++ b/config.toml
@@ -84,3 +84,10 @@ enableCORS = false
 # Default: 'localhost'
 serverAddress = "0.0.0.0"
 
+# Whether to send usage statistics to Streamlit.
+# Default: true
+gatherUsageStats = true
+
+# Port that the browser should use to connect to the server when in liveSave mode.
+# Default: whatever value is set in server.port.
+serverPort = 80
