--- a/config.toml
+++ b/config.toml
@@ -91,3 +91,9 @@ gatherUsageStats = true
 # Port that the browser should use to connect to the server when in liveSave mode.
 # Default: whatever value is set in server.port.
 serverPort = 80
+
+[s3]
+
+# Name of the AWS S3 bucket to save apps.
+# Default: (unset)
+# bucket =
